# csgo-log-parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: action.yml
include/: config.hpp  csgoparse.hpp  elasticsearch.hpp  geo.hpp  json.hpp  utils.hpp
include/logfile/: reader.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  sample_logs.hpp  tests.cpp
